iss5 scene nav overlap fix

--- a/css/brush-controls.css
+++ b/css/brush-controls.css
@@ -1,6 +1,5 @@
 #simplefog-brush-controls {
     position: absolute;
-    top: 75px;
     left: 120px;
     width: 180px;
     text-align: center;
